Added new stuff

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,10 @@
+<% content_for :nav do %>
+	<%= render :partial => 'main_nav' %>
+<% end %>
+
 <h1>Artist List</h1>
 
 <% @artists.each do | a | %>
 	<%= link_to a.name, artist_root_url(:subdomain => a.name) %><br />
 <% end %>
 
-<%= link_to 'New Artist', new_artist_path %>
