--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :nav do %>
+	<%= render :partial => 'main_nav' %>
+<% end %>
+
 <% form_for @artist do | f | %>
 	Name: <%= f.text_field :name %>
 	<%= f.submit %>
