--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,2 @@
+<%= render :partial => 'nav' %>
 <h1>Welcome to <i><%= @artist.name %></i> fansite</h1>
-
-<%= link_to 'Gallery', image_categories_path %>
