Nothing just testing

--- a/app/views/image_categories/index.html.erb
+++ b/app/views/image_categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= link_to 'Gallery', image_categories_path %></h1>
 
-<%= link_to 'New', new_image_category_url %>
+<p><%= link_to 'New', new_image_category_url %></p>
 
 <% if @images_categories.empty? %>
 	There is no image here 
