--- a/app/views/image_categories/show.html.erb
+++ b/app/views/image_categories/show.html.erb
@@ -1,22 +1,16 @@
-<%= render :partial => 'artists/nav' %>
-
 <h1><%= link_to 'Gallery', image_categories_path %> / <%= @image_category.name %></h1>
 
 <p>
-	<%= link_to 'Upload Image', new_image_category_image_path(@image_category) %>
+	<%= link_to 'Upload Image', new_image_category_image_path(@image_category) %> | 
+	<%= link_to 'Delete Category', image_category_path(@image_category), :method => :delete %> | 
+	<%= link_to 'Edit Category', edit_image_category_path(@image_category) %>
 </p>
 
 <% if @images.empty? %>
 	There is no image here 
 <% else %>
-	<table id="gallery"  width="100%">
-	<% @images.in_groups_of(5) do | image_array | %>
-		<tr>
-		<% image_array.each do | image | %>
-			<td width="20%"><%= link_to image_tag(image.thumbnail_url), image.url unless image.nil? %></td>
-		<% end %>
-		</tr>
+	<% tableize(@images, 5, :id => :gallery) do | image | %>
+		<%= link_to image_tag(image.thumbnail_url, :class => :thumbnail), image.url %>
 	<% end %>
-	</table>
 <% end %>
 
