--- a/app/views/image_categories/index.html.erb
+++ b/app/views/image_categories/index.html.erb
@@ -1,5 +1,3 @@
-<%= render :partial => 'artists/nav' %>
-
 <h1><%= link_to 'Gallery', image_categories_path %></h1>
 
 <p><%= link_to 'New', new_image_category_url %></p>
@@ -7,18 +5,9 @@
 <% if @images_categories.empty? %>
 	There is no image here 
 <% else %>
-	<table id="gallery"  width="100%">
-	<% @images_categories.in_groups_of(5) do | cat_array | %>
-		<tr>
-		<% cat_array.each do | cat | %>
-			<td width="20%">
-				<% unless cat.nil? %>
-					<%= link_to  image_tag(cat.thumbnail_url), image_category_path(cat) %>
-					<%= link_to 'Delete', image_category_path(cat), :method => :delete %>
-				<% end %>
-			</td>
-		<% end %>
-		</tr>
+	<% tableize(@images_categories, 5, :id => 'gallery') do | cat |%>
+		<%= link_to  image_tag(cat.thumbnail_url, :class => :thumbnail), image_category_path(cat) %><br />
+		<b><%= cat.name %></b><br />
+		<%= cat.images.size %> images
 	<% end %>
-	</table>
 <% end %>
