--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<%= stylesheet_link_tag 'main' %>
+	<%= javascript_include_tag 'jquery-1.3.2.min', 'main' %>
+	<%= yield :header %>
 <head>
 <body>
 	<div id="container">
-		<div id="nav"><%= yield :nav %></div>
+		<div id="nav">
+			<% if current_subdomain.nil? %>
+				<%= render :partial => 'layouts/nav' %>
+			<% else %>
+				<%= render :partial => 'artists/nav' %>
+			<% end %>
+		</div>
 		<div id="content">
 			<% if flash[:notice ] %>
 				<%= flash[:notice] %>
