Before changing Song to has_many association

--- a/app/views/discs/_form.erb
+++ b/app/views/discs/_form.erb
@@ -17,4 +17,4 @@ Songs: <%= link_to_function 'Add Song', 'add_song()' %><br />
 </div>
 <hr />
 
-<%= form.submit %>
+<%= form.submit %> or <%= link_to 'back', :back %>
