--- a/app/views/discs/show.html.erb
+++ b/app/views/discs/show.html.erb
@@ -16,3 +16,5 @@
 
 <%= link_to 'Edit', edit_disc_path(@disc) %>
 <%= link_to 'Add Images', new_disc_image_path(@disc) %>
+<%= link_to 'Edit Images', organize_images_disc_path(@disc) %>
+<%= link_to 'Edit Songs', organize_songs_disc_path(@disc) %>
