--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<%= stylesheet_link_tag 'main' %>
-	<%= javascript_include_tag 'jquery-1.3.2.min', 'main' %>
+	<%= javascript_include_tag 'jquery-1.3.2.min', 'main', 'swfobject' %>
 	<%= yield :header %>
 <head>
 <body>
